--- a/index.html
+++ b/index.html
@@ -9,49 +9,48 @@
 </head>
 <body>
         <header class="header">
-                <div class="original">
-                    <div class="panel">
-                        <h3>Fashion</h3>
-               
-                        <div class="btns">
-                           <a class="btn1" href="home.html">Home</a>
-                            <a class="btn2" href="store.html">Store</a>
-                            <a class="btn3" href="about.html">About</a>
-                            <a class="btn4" href="contact.html">Contact</a>
-                        </div>
+                <div class="panel">
+                    <div class="logo"><h3>Fashion</h3></div>
+                    <div class="btns">
+                        <a  href="#">Home</a>
+                        <a  href="#">Store</a>
+                        <a  href="#">About</a>
+                        <a  href="#">Contact</a>
                     </div>
+                </div>
+        </header>
 
-                    <div class="picture"></div>
+        <div class="picture"></div>
 
-                    <div class="information">
-                            <img src="img/adult-beautiful-beauty-1187777.jpg" alt="">
-                            <div class="about_details">
-                                <h2>GUCCI</h2>
-                                <p>Uus gucci sügise kollektsioon on saabunud! </p>
-                            </div>
-                    </div>
+        <div class="information">
+            <img src="img/gucciKollektsioon.jpg" alt="">
+            <div class="about_details">
+                <h2>GUCCI</h2>
+                <p>Uus gucci sügise kollektsioon on saabunud! </p>
+            </div>
+        </div>
+        
+        <div class="items">
+            <div class="item">
+                <img src="img/NMN51R4_mz.jpg" alt="vaade">
+                <h2>Shoes</h2>
+                <h3>GUCCI</h3>
+                <a class="TT" href="TT.html">Buy 1000€</a>
+            </div>
 
-                    <div class="items">
-                            <div class="item">
-                                <span class="pilt"><img src="img/pedali.jpg" alt="vaade"></span>
-                                <h3>Jalatsid</h3>
-                                <p>Nike Air Max</p>
-                                <a class="TT" href="TT.html">Buy 165.99€</a>
-                            </div>
-                            <div class="item">
-                                <span class="pilt"><img src="img/futbolka.jpg" alt="vaade"></span>
-                                <h3>T-särk</h3>
-                                <p>Versace</p>
-                                <a class="TT" href="TT.html">Buy 329.99€</a>
-                            </div>
-                            <div class="item">
-                                <span class="pilt"><img src="img/sumka.jpg" alt="vaade"></span>
-                                <h3>Kott</h3>
-                                <p>Brita Y3</p>
-                                <a class="TT" href="TT.html">Buy 96.99€</a>
-                            </div>
-                        </div>
-                </div> 
-            </header>
+            <div class="item">
+                <img src="img/01_1526.jpg" alt="vaade">
+                <h2>Hoodi</h2>
+                <p>LOUIS VUITTON</p>
+                <a class="TT" href="TT.html">Buy 800€</a>
+            </div>
+
+             <div class="item">
+                <img src="img/sumkaver.jpg" alt="vaade">
+                <h2>Bag</h2>
+                <p>VERSACE</p>
+                <a class="TT" href="TT.html">Buy 1400€</a>
+            </div>
+        </div>
 </body>
 </html>
